Added street data and new color pallete

--- a/src/app.sass
+++ b/src/app.sass
@@ -1,11 +1,11 @@
 .background
-  fill: #eee
+  fill: #002b36
   pointer-events: all
 
 
 .map-layer 
   fill: #fff
-  stroke: #aaa
+  stroke: #657b83
 
 
 .effect-layer
