Fixed centering and styling

--- a/src/app.sass
+++ b/src/app.sass
@@ -1,26 +1,26 @@
-.background
-  fill: #002b36
-  pointer-events: all
+body
+  background-color: #002b36
+  width: 100vw
+  height: 100vh
+  margin: 0
+
+.main-canvas
+
+  .background
+    fill: #002b36
+    pointer-events: all
 
 
-.map-layer 
-  fill: #fff
-  stroke: #657b83
+  .map-layer
+    fill: #fff
+    stroke: #657b83
+
+  text
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-weight: 300
 
 
-.effect-layer
-  pointer-events:none
+  text.big-text
+    font-size: 30px
+    font-weight: 400
 
-
-text
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
-  font-weight: 300
-
-
-text.big-text
-  font-size: 30px
-  font-weight: 400
-
-
-.effect-layer text, text.dummy-text
-  font-size: 12px
