Plotted live location of vehicles

--- a/src/app.sass
+++ b/src/app.sass
@@ -24,3 +24,10 @@ body
     font-size: 30px
     font-weight: 400
 
+  .vehicle-layer
+    .vehicle
+      fill: #d33682
+      transition: 0.25s ease-in-out r
+      &:hover
+        r: 5
+
