--- a/src/app.sass
+++ b/src/app.sass
@@ -15,6 +15,11 @@ body
     fill: #fff
     stroke: #657b83
 
+    .neighborhood
+      fill: #073642
+      &:hover
+        fill: #b58900
+
   text
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
     font-weight: 300
