Added auto-update for bus locations

--- a/src/app.sass
+++ b/src/app.sass
@@ -32,7 +32,7 @@ body
   .vehicle-layer
     .vehicle
       fill: #d33682
-      transition: 0.25s ease-in-out r
+      transition: 0.25s ease-in-out r, 10s transform
       &:hover
         r: 5
 
