--- a/src/app/modules/map/map.html
+++ b/src/app/modules/map/map.html
@@ -1,1 +1,11 @@
-<svg class="main-canvas"></svg>
+<div>
+  <svg class="main-canvas"></svg>
+  <div class="more-info" ng-show="selectedVehicle">
+    <h1>{{selectedRoute.title}}</h1>
+    <ul>
+      <li>Vehicle: {{selectedVehicle.id}}</li>
+      <li>Speed: {{selectedVehicle.speedKmHr}} kmph</li>
+      <li>Heading: <img src="images/compass.svg" class="heading-icon" ng-style="{'transform':'rotate(' + selectedVehicle.heading + 'deg)'}"></li>
+    </ul>
+  </div>
+</div>
