Simplified vehicle update process, moved styles for roads to SASS

--- a/src/app/modules/map/map.sass
+++ b/src/app/modules/map/map.sass
@@ -51,6 +51,22 @@
         stroke: $magenta
         stroke-width: 2px
 
+  .freeway, .artery, .street
+    fill: none
+    pointer-events: none
+
+  .freeway
+    stroke-width: 1.5
+    stroke: $yellow
+
+  .artery
+    stroke-width: 1
+    stroke: $yellow
+
+  .street
+    stroke-width: 0.5
+    stroke: $base01
+
 .more-info
   position: absolute
   top: 2rem
