--- a/src/app/modules/map/map.sass
+++ b/src/app/modules/map/map.sass
@@ -76,6 +76,8 @@
   border: 0.2em solid darken($base2, 25%)
   color: $base00
   padding: 1em
+  overflow: hidden
+  transition: 0.5s all
 
   > *:not(:last-child)
     margin-bottom: 1rem
@@ -92,3 +94,16 @@
     .heading-icon
       width: 1em
       fill: $base00
+
+  &.ng-enter, &.ng-leave.ng-leave-active
+    border: 0 solid darken($base2, 25%)
+    max-height: 0
+    max-width: 0
+    padding: 0
+
+
+  &.ng-leave, &.ng-enter.ng-enter-active
+    max-height: 50vh
+    max-width: 100vw
+    border: 0.2em solid darken($base2, 25%)
+    padding: 1em
