--- a/src/app/modules/map/map.sass
+++ b/src/app/modules/map/map.sass
@@ -96,14 +96,10 @@
       fill: $base00
 
   &.ng-enter, &.ng-leave.ng-leave-active
-    border: 0 solid darken($base2, 25%)
-    max-height: 0
-    max-width: 0
-    padding: 0
+    transform: translateY(-50%)
+    opacity: 0
 
 
   &.ng-leave, &.ng-enter.ng-enter-active
-    max-height: 50vh
-    max-width: 100vw
-    border: 0.2em solid darken($base2, 25%)
-    padding: 1em
+    transform: translateY(0)
+    opacity: 1
