Added hamburger component

--- a/src/app/modules/map/map.html
+++ b/src/app/modules/map/map.html
@@ -8,4 +8,5 @@
       <li>Heading: <img src="images/compass.svg" class="heading-icon" ng-style="{'transform':'rotate(' + selectedVehicle.heading + 'deg)'}"></li>
     </ul>
   </div>
+  <hamburger open="isSidebarOpen"></hamburger>
 </div>
