Implimented sidebar container

--- a/src/app/directives/hamburger/hamburger.html
+++ b/src/app/directives/hamburger/hamburger.html
@@ -1,4 +1,4 @@
-<div class="hamburger-component"
+<div class="hamburger-directive"
      ng-class="{'open':open}"
      ng-click="open = !open">
   <span></span>
