--- a/src/app/directives/hamburger/hamburger.html
+++ b/src/app/directives/hamburger/hamburger.html
@@ -1,6 +1,6 @@
 <div class="hamburger-directive"
      ng-class="{'open':open}"
-     ng-click="open = !open">
+     ng-click="$event.stopImmediatePropagation(); open = !open">
   <span></span>
   <span></span>
   <span></span>
