Added README content

--- a/src/app/modules/map/map.sass
+++ b/src/app/modules/map/map.sass
@@ -34,7 +34,7 @@ $sidebarWidth: 300pt
         &:hover
           fill: $yellow
 
-        & + .selected
+        &.selected
           fill: lighten($base02, 5%)
 
     .vehicle-layer
@@ -58,7 +58,7 @@ $sidebarWidth: 300pt
         &:hover
           r: 5
 
-        &+.selected
+        &.selected
           animation-duration: 1s
           animation-name: pulse
           animation-iteration-count: infinite
