Updated vehicle selection animation

--- a/src/app/modules/map/map.sass
+++ b/src/app/modules/map/map.sass
@@ -47,12 +47,12 @@ $sidebarWidth: 300pt
         stroke-opacity: inherit
 
         @keyframes pulse
-          from
-            r: 3
+          0%
+            stroke-width: 0
             stroke-opacity: 1
 
-          to
-            r: 5
+          100%
+            stroke-width: 5
             stroke-opacity: 0
 
         &:hover
